# twin-mind

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SKILL.md  install-skills.sh  install.sh  pyproject.toml
.claude/: .gitignore  decisions.jsonl
.github/workflows/: ci.yml
docs/: IMPROVEMENTS.md
docs/plans/: 2025-01-22-twin-mind-v1.1-design.md  2025-01-22-twin-mind-v1.1-implementation.md  2026-01-22-claude-code-integration-design.md
references/: advanced.md
scripts/: twin-mind.py
scripts/twin_mind/: __init__.py  auto_init.py  cli.py  config.py  constants.py  entity_extractors.py  entity_graph.py  fs.py  git.py  index_state.py  indexing.py  js_oxc.py  memory.py  memvid_check.py  output.py  shared_memory.py
scripts/twin_mind/commands/: __init__.py  ask.py  context.py  doctor.py  entities.py  export.py  index.py  init.py  install_skills.py  prune.py  recent.py  reindex.py  remember.py  reset.py  search.py  stats.py  status.py  uninstall.py  upgrade.py
tests/: __init__.py  conftest.py  test_auto_init.py  test_config.py  test_entity_graph.py  test_fs.py  test_git.py  test_indexing.py  test_memory.py  test_output.py  test_shared_memory.py  test_version.py
tests/test_commands/: __init__.py  test_context.py  test_doctor.py  test_entities.py  test_export.py  test_index.py  test_init.py  test_prune.py  test_recent.py  test_remember.py  test_reset.py  test_search.py  test_stats.py  test_status.py  test_uninstall.py  test_upgrade.py
