[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twin-mind"
version = "1.9.3"
description = "Dual memory for AI coding agents - semantic code search and persistent memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Pego", email = "hello@pego.tech"}
]
keywords = ["ai", "memory", "semantic-search", "coding-assistant", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "memvid-sdk>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
twin-mind = "twin_mind.cli:main"

[project.urls]
Homepage = "https://github.com/pego/twin-mind"
Repository = "https://github.com/pego/twin-mind"
Issues = "https://github.com/pego/twin-mind/issues"

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.setuptools.package-dir]
"" = "scripts"

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without an explicit strict= parameter
]

[tool.ruff.lint.isort]
known-first-party = ["twin_mind"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external resources",
]

# Coverage configuration
[tool.coverage.run]
source = ["scripts/twin_mind"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

# Mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["union-attr", "index", "attr-defined", "var-annotated", "assignment"]
exclude = [
    "tests/",
    "build/",
    "dist/",
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = [
    "B101",  # assert (used in tests)
    "B108",  # hardcoded tmp (false positive in our case)
    "B110",  # try-except-pass (intentional for graceful fallbacks)
    "B310",  # urllib urlopen (we control the URL)
    "B404",  # subprocess import (needed for git operations)
    "B603",  # subprocess without shell (we use fixed git commands)
    "B607",  # partial path (git is expected in PATH)
]
